# paperprobe

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: base.py  checklist_agent.py  extractor.py  pipeline.py  relevance.py  synthesis.py
backend/app/api/: analysis.py  assessments.py  assistant.py  auth.py  cosmin_checklist.py  export.py  papers.py  projects.py  router.py
backend/app/cosmin_data/: checklist_v2.py  seed.py
backend/app/models/: __init__.py  assessment.py  cosmin.py  document.py  paper.py  project.py  task.py
backend/app/schemas/: assessment.py  cosmin.py  paper.py  project.py
backend/app/services/: ai_client.py  document_parser.py  export_service.py  vector_store.py
backend/app/workers/: celery_app.py  embed_document.py  parse_document.py  run_analysis.py
docs/: README.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/paper/[id]/: page.tsx
frontend/src/components/: NavBar.tsx
frontend/src/components/assessment/: AnalysisProgress.tsx  ChecklistPanel.tsx  PdfViewer.tsx  RatingEditor.tsx
frontend/src/components/assistant/: ChatWindow.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
nginx/: Dockerfile  default.conf  nginx.conf
(+1 files in other folders)
