[project]
name = "cosmin-checker-backend"
version = "0.1.0"
description = "COSMIN Risk of Bias Assessment Platform - Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Vector DB
    "qdrant-client>=1.11.0",

    # AI
    "httpx>=0.27.0",
    "jinja2>=3.1.0",

    # Document parsing
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",

    # Export
    "openpyxl>=3.1.0",

    # Utils
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
